# endgame-mar-c

./: CMakeLists.txt
endgame.menu/: endgame.sln
endgame.menu/endgame/: endgame.vcxproj  main.c
endgame.menu/endgame/images/: desktop.ini
endgame.menu/endgame/x64/Debug/: endgame.exe.recipe  endgame.ilk  vc143.idb
endgame.menu/endgame/x64/Debug/endgame.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  endgame.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
engame_menushka_inGame/: CMakeLists.txt
engame_menushka_inGame/menu/: endgame.vcxproj
engame_menushka_inGame/resource/: header.h
engame_menushka_inGame/resource/SDL2_image-2.8.2/include/: SDL_image.h
engame_menushka_inGame/resource/SDL2_mixer-2.8.0/include/: SDL_mixer.h
engame_menushka_inGame/resource/SDL2_ttf-2.22.0/include/: SDL_ttf.h
engame_menushka_inGame/src/: start_game.c
engame_menushka_inGame/src/entities/: board_build_thirdRoom.c
engame_menushka_inGame/src/errs/: sdl_init.c
engame_menushka_inGame/src/mechanics/: check_collision.c  update_hero.c  update_hero_thirdRoom.c
engame_menushka_inGame/src/menu/: init_texture_menu.c  menu_main.c  win_buildNHD.c  win_build_Settings.c
engame_menushka_inGame/src/render/: render_all_room.c  render_bg.c  render_board_thirdRoom.c  render_main.c  render_obj.c
menu/images/: desktop.ini
resource/: header.h
resource/SDL2_image-2.8.2/include/: SDL_image.h
src/: main.c  start_game.c
src/entities/: board_build.c  door_create.c  handle_mouse_click_for_objects.c  init_arr4room_0.c  init_arr4room_1.c  init_arr4room_2.c  init_arr4room_3.c  init_first_room.c  init_room.c  main_hero.c  nuul_obj.c  room_build.c
src/entities/objects/first_room/: camin_on.c  open_book.c  picture_note.c
src/entities/objects/second_room/: chair_chek.c  gazeta_op.c  open_cupboard.c  piano_note.c  under_piano.c
src/errs/: sdl_init.c  sdl_render.c  sdl_ttf.c  sdl_window.c
src/graphics/: game_cutscene1.c  game_cutscene2.c  load_sound.c  load_texture.c  play_sound.c  render_cutscene.c
src/mechanics/: check_collision.c  game_cutscene.c  main_event_handler.c  update_hero.c  update_hero_thirdRoom.c
src/menu/: handle_mouse_button_down.c  ingame_main_menu_set.c  ingame_voice_menu_set.c  init_texture_menuInGame.c  menu_main.c  play_click_sound.c  win_buildFHD.c  win_buildHD.c  win_buildMenuButtons.c
src/render/: ingame_menu_esc_render.c  reder_bg.c  render_all_room.c  render_board.c  render_board_thirdRoom.c  render_button.c  render_door.c  render_hero.c  render_main.c  render_obj.c  render_room.c
